--- a/ciy_client/pubspec.yaml
+++ b/ciy_client/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   window_manager: ^0.2.7
   path_provider: ^2.1.2
   system_info: ^1.0.1
+  shared_preferences: ^2.2.2
 
 
 dev_dependencies:
