--- a/ciy_client/pubspec.yaml
+++ b/ciy_client/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   path_provider: ^2.1.2
   system_info: ^1.0.1
   shared_preferences: ^2.2.2
+  file_picker: ^6.1.1
 
 
 dev_dependencies:
