--- a/ciy_client/pubspec.yaml
+++ b/ciy_client/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   system_info: ^1.0.1
   shared_preferences: ^2.2.2
   file_picker: ^6.1.1
+  flutter_bloc: ^8.1.4 
 
 
 dev_dependencies:
