--- a/ciy_client/pubspec.yaml
+++ b/ciy_client/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   shared_preferences: ^2.2.2
   file_picker: ^6.1.1
   flutter_bloc: ^8.1.4 
+  equatable: ^2.0.0
+
 
 
 dev_dependencies:
