--- a/ciy_client/pubspec.yaml
+++ b/ciy_client/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   loading_animation_widget: ^1.2.0
   tar: ^1.0.3
   flex_color_scheme: ^7.3.1
+  mutex: ^3.1.0
+  http: ^1.2.0
 
 
 
