--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ doc/api/
 .flutter-plugins
 .flutter-plugins-dependencies
 /ciy_client/data/
+/ciy_client/linux/flutter/generated_plugin_registrant.cc
+/ciy_client/linux/flutter/generated_plugins.cmake
+/ciy_client/macos/Flutter/GeneratedPluginRegistrant.swift
+/ciy_client/windows/flutter/generated_plugin_registrant.cc
+/ciy_client/windows/flutter/generated_plugins.cmake
