-add working authentication

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ doc/api/
 /ciy_client/macos/Flutter/GeneratedPluginRegistrant.swift
 /ciy_client/windows/flutter/generated_plugin_registrant.cc
 /ciy_client/windows/flutter/generated_plugins.cmake
+/ciy_client/linux/flutter/generated_plugin_registrant.cc
+/ciy_client/linux/flutter/generated_plugins.cmake
+/ciy_client/macos/Flutter/GeneratedPluginRegistrant.swift
+/ciy_client/windows/flutter/generated_plugin_registrant.cc
+/ciy_client/windows/flutter/generated_plugins.cmake
