--- a/ciy_client/pubspec.yaml
+++ b/ciy_client/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   launch_at_startup: ^0.2.2
   package_info_plus: ^5.0.1
   windows_single_instance: ^1.0.1 
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
