--- a/ciy_client/pubspec.yaml
+++ b/ciy_client/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   package_info_plus: ^5.0.1
   windows_single_instance: ^1.0.1 
   flutter_secure_storage: ^9.0.0
+  msix: ^3.16.7
 
 dev_dependencies:
   flutter_test:
@@ -46,3 +47,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/app_icon_windows.png
+
+msix_config:
+  display_name: Cloud IY
+  publisher_display_name: CloudIY™
+  msix_version: 1.0.0.0
+  logo_path: ciy_client\assets\app_icon_windows.png
+  capabilities: internetClientServer, privateNetworkClientServer
