--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ doc/api/
 /ciy_client/macos/Flutter/GeneratedPluginRegistrant.swift
 /ciy_client/windows/flutter/generated_plugin_registrant.cc
 /ciy_client/windows/flutter/generated_plugins.cmake
+/ciy_client/Installers/Output/
