--- a/.github/workflows/release-windows-arm64-installer.yml
+++ b/.github/workflows/release-windows-arm64-installer.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        
+      - uses: Vampire/setup-wsl@v3
+        with:
+          distribution: Ubuntu-22.04
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
