--- a/.github/workflows/release-windows-arm64-installer.yml
+++ b/.github/workflows/release-windows-arm64-installer.yml
@@ -12,6 +12,13 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
         
+      - name: Set up Flutter
+        uses: flutter-actions/setup-flutter@v2
+        with:
+          channel: stable
+          version: '3.16.9
+
+        
 
       - name: Flutter build
         run: flutter build windows --release
