--- a/.github/workflows/release-windows-arm64-installer.yml
+++ b/.github/workflows/release-windows-arm64-installer.yml
@@ -13,8 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Flutter
-        run: github_windows_setup_flutter.ps1 3.16.9 stable
-        shell: pwsh
+        run: ./github_windows_setup_flutter.ps1 3.16.9 stable
           
       - name: Flutter build
         run: flutter build windows --release
