-add flutter desktop sleep

--- a/.github/workflows/release-windows-arm64-installer.yml
+++ b/.github/workflows/release-windows-arm64-installer.yml
@@ -1,6 +1,9 @@
 name: Build executable for windows amd64
 run-name: ${{ github.actor }}
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
 jobs:
   build-and-upload-package:
     timeout-minutes: 60
