--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   package_info_plus: ^5.0.1
   windows_single_instance: ^1.0.1
   flutter_secure_storage: ^9.0.0
+  flutter_desktop_sleep: ^0.0.2
 
 dev_dependencies:
   flutter_test:
